# PhysTwin

./: .gitignore  Dockerfile  README.md  README_julia.md  ScreenCamera_2026-01-06-04-17-05.json  T_mesh.stl  aruco_to_ground_transform.py  base_cloth.ply  clip.stl  cube.stl  data_config.csv  debug_transformation.py  evaluate.sh  evaluate_all.py  evaluate_chamfer.py  evaluate_track.py  example_3d_particle.py  export_gaussian_data.py  export_video_human_mask.py  gs_render.py  gs_render_dynamics.py  gs_render_static.py  gs_render_static.sh  gs_run.sh  gs_run_simulate.sh  gs_run_simulate_test.sh  gs_run_simulate_white.sh  gs_run_train.sh  gs_train.py  inference_warp.py  interactive_cube.py  interactive_playground.py  interactive_playground.sh  interactive_pte.py  optimize_batch.sh  optimize_cma.py  pyproject.toml  run.sh  run_batch.sh  script_inference.py  (+10 more)
configs/: cloth.yaml  real.yaml
data_process/: align.py  data_process_pcd.py
docker_scripts/: build.sh  run.sh
env_install/: 5090_env_install.sh  env_install.sh
gaussian_splatting/: dynamic_utils.py  evaluate_render.py  generate_interp_poses.py  render_utils.py
gaussian_splatting/arguments/: __init__.py
gaussian_splatting/gaussian_renderer/: __init__.py
gaussian_splatting/scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
gaussian_splatting/utils/: brics_utils.py  camera_utils.py
particleformer/: __init__.py  config.py  metrics.py  submit_particleformer.sh  train.py  trainer.py
particleformer/data/: __init__.py  dataset.py
particleformer/losses/: __init__.py  hybrid_loss.py
particleformer/models/: __init__.py  embeddings.py  particleformer.py
qqtt/data/: real_data.py  simple_data.py
qqtt/engine/: cma_optimize_warp.py  trainer_warp.py  trainer_warp.py.backup
qqtt/model/diff_simulator/: spring_mass_warp.py
qqtt/utils/: __init__.py  config.py  visualize.py
umi/: render_urdf.py  umi.urdf  umi_tactile.urdf
umi/meshes/: finger.stl  holder_left.stl  holder_right.stl  umi_gripper_base.stl
utils/: aruco.py  aruco_multiview.py  brics_utils.py  detect_ground.py  hdf5_utils.py  postprocess.py  read_aruco.py  run.sh
